--- a/Backend-UniFinal/appsettings.json
+++ b/Backend-UniFinal/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "mongoDb": "mongodb+srv://dev:dev@cluster0.qbbyiky.mongodb.net/?retryWrites=true&w=majority"
+  "Database": {
+    "ConnectionString": "mongodb+srv://dev:dev@cluster0.qbbyiky.mongodb.net/?retryWrites=true&w=majority",
+    "Database": "PesquisaProject",
+    "PesquisaCollection": "Pesquisas",
+    "RespostaCollection": "Respostas"
   }
 }
