--- a/Backend-UniFinal/appsettings.json
+++ b/Backend-UniFinal/appsettings.json
@@ -1,15 +1,16 @@
 {
+  "Database": {
+    "ConnectionString": "mongodb://mongo:vVfUWNV1VdMlvRFQkdra@containers-us-west-57.railway.app:7976",
+    "Database": "PesquisaProject",
+    "PesquisaCollection": "Pesquisas",
+    "RespostaCollection": "Respostas"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Database": {
-    "ConnectionString": "mongodb+srv://dev:dev@cluster0.qbbyiky.mongodb.net/?retryWrites=true&w=majority",
-    "Database": "PesquisaProject",
-    "PesquisaCollection": "Pesquisas",
-    "RespostaCollection": "Respostas"
-  }
+  "AllowedHosts": "*"
+
 }
