--- a/Backend-UniFinal/appsettings.json
+++ b/Backend-UniFinal/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Database": {
-    "ConnectionString": "mongodb://mongo:vVfUWNV1VdMlvRFQkdra@containers-us-west-57.railway.app:7976",
-    "Database": "PesquisaProject",
-    "PesquisaCollection": "Pesquisas",
-    "RespostaCollection": "Respostas"
+    "ConnectionString": "mongodb+srv://Ragnaruzprevitera:9Z34bIYqdIXWb0cM@cluster0.81ve8si.mongodb.net/?retryWrites=true&w=majority",
+    "Database": "Final2",
+    "PesquisaCollection": "Pesquisas2",
+    "RespostaCollection": "Respostas2"
   },
   "Logging": {
     "LogLevel": {
